# pybalmorel

./: .buildinfo  .env  .gitignore  AGENTS.md  LICENSE  PKG-INFO  README.md  about.html  developing.html  environment.yaml  environment.yml  examples.html  execution.html  genindex.html  get_started.html  index.html  objects.inv  postprocessing.html  preprocessing.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: about.doctree  developing.doctree  environment.pickle  examples.doctree  execution.doctree  get_started.doctree  index.doctree  postprocessing.doctree  preprocessing.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/eel_dashboard/: index.doctree
.doctrees/autoapi/pybalmorel/: index.doctree
.doctrees/developing/: building_docs.doctree  environments.doctree  publishing.doctree  testing.doctree
.doctrees/examples/: execution.doctree  postprocessing.doctree  preprocessing.doctree
.doctrees/get_started/: installation.doctree
.doctrees/postprocessing/: map_plotting.doctree  overview.doctree
.doctrees/preprocessing/: overview.doctree  timeseriesagg.doctree
.github/workflows/: sphinx.yml  tests.yml
_sources/: execution.md.txt  index.md.txt  postprocessing.md.txt  preprocessing.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/eel_dashboard/: index.rst.txt
_sources/autoapi/pybalmorel/: index.rst.txt
_sources/developing/: environments.md.txt  testing.md.txt
_sources/examples/: preprocessing.md.txt
_sources/get_started/: installation.md.txt
_sources/postprocessing/: map_plotting.md.txt
_sources/preprocessing/: timeseriesagg.md.txt
autoapi/: index.html
autoapi/eel_dashboard/: index.html
autoapi/pybalmorel/: index.html
autoapi/pybalmorel/classes/: index.html
autoapi/pybalmorel/formatting/: index.html
autoapi/pybalmorel/interactive/: index.html
autoapi/pybalmorel/plotting/: index.html
autoapi/pybalmorel/timeagg/: index.html
autoapi/pybalmorel/utils/: index.html
developing/: building_docs.html  environments.html  publishing.html  testing.html
doc/: conf.py
docs/: PostProcessing.ipynb  about.md  conf.py  developing.md  examples.md  get_started.md  index.html  index.md  introduction.md  postprocessing.md  preprocessing.md
docs/css/: css_options.css
docs/developing/: building_docs.md  environments.md  publishing.md
docs/examples/: execution.md  geofilemaker.md  postprocessing.md  postprocessing_map.md  preprocessing.md
docs/get_started/: examples.md  installation.md
docs/postprocessing/: map_plotting.md  overview.md
docs/preprocessing/: overview.md  timeseriesagg.md
examples/: Example.py  Execution.ipynb  MapPlottingLocal.ipynb  PostProcessing.ipynb  PostProcessingLocal.ipynb  PostProcessingLocalJuneCourse.ipynb  PostProcessing_map.ipynb  PostProcessing_test.ipynb  PreProcessing.ipynb  Test_MR.ipynb  Weather_year.ipynb  execution.html  postprocessing.html  preprocessing.html
examples/Balmorel/simex/: .keepsimexfolder
examples/files/: Geofile_Example.geojson  MainResults.gdx  MainResults_EU_2030.gdx  MainResults_EU_2030_NoH2.gdx  MainResults_EU_2050.gdx  MainResults_EU_2050_NoH2.gdx  MainResults_EU_2050_copy.gsp  MainResults_STO_heat.gdx  MainResults_STO_new.gdx  MainResults_STO_new_bis.gdx  MainResults_base.gdx  countries_background_example.csv  countries_colors_example.csv  mutli_year_config.yml
examples/files/background_csv/: OFF_Existing_RG3.csv  OFF_SP316_HH155_RG1.csv  OFF_SP316_HH155_RG2.csv  OFF_SP316_HH155_RG3.csv  OFF_SP370_HH155_RG1.csv  OFF_SP370_HH155_RG2.csv  OFF_SP370_HH155_RG3.csv  OLD_OFF_RG2.csv  OLD_ONS_SP199_HH150_RG1.csv  OLD_ONS_SP277_HH100_RG1.csv  OLD_PV_NoTracking_RG1.csv  ONS_Existing_RG1.csv  ONS_SP199_HH100_RG1.csv  ONS_SP199_HH100_RG2.csv  ONS_SP199_HH100_RG3.csv  ONS_SP199_HH150_RG1.csv  ONS_SP199_HH150_RG2.csv  ONS_SP199_HH150_RG3.csv  ONS_SP277_HH100_RG1.csv  ONS_SP277_HH100_RG2.csv  ONS_SP277_HH100_RG3.csv  ONS_SP277_HH150_RG1.csv  ONS_SP277_HH150_RG2.csv  ONS_SP277_HH150_RG3.csv  ONS_SP335_HH100_RG1.csv  ONS_SP335_HH100_RG2.csv  ONS_SP335_HH100_RG3.csv  ONS_SP335_HH150_RG1.csv  ONS_SP335_HH150_RG2.csv  ONS_SP335_HH150_RG3.csv  PV_NoTracking_RG1.csv  PV_NoTracking_RG2.csv  PV_NoTracking_RG3.csv  PV_Tracking_RG1.csv  PV_Tracking_RG2.csv  PV_Tracking_RG3.csv
get_started/: installation.html
postprocessing/: map_plotting.html  overview.html
preprocessing/: overview.html  timeseriesagg.html
pybalmorel/: formatting.py
pybalmorel/interactive/: interactive_functions.py
pybalmorel/plotting/: maps_balmorel.py  plot_functions.py
src/pybalmorel/: Balmorel_ReadData.gms  Balmorelbb4_ReadData.inc  __init__.py  classes.py  formatting.py  functions.py  timeagg.py  utils.py
src/pybalmorel/geofiles/: bypass_lines.csv  coordinates_RRR.csv  hydrogen_third_nations.csv
src/pybalmorel/interactive/: interactive_functions.py
src/pybalmorel/plotting/: LoadGDX.py  MainResults.py  MapsBalmorel.py  MapsBalmorelV3.py  ProductionMap.py  ProductionProfile.py  __init__.py  interactive_barchart.py  maps_balmorel.py  plot_functions.py  production_profile.py
src/pybalmorel/timeagg/: GeneralHelperFunctions.py  TimeseriesAggregation.py  __init__.py  compare_duration_curves.py  timeagg.py
tests/: Test.ipynb  Test.py  Test_MR.ipynb  online_tests.sh  test.sh  test_execution.py  test_postprocessing.py  test_preprocessing.py  test_utils.py
tests/files/: MainResults_Example2.gdx  MainResults_ScenarioName.gdx
tests/output/: .keepoutputfolder
(+68 files in other folders)
