[project]
name = "pybalmorel"
version = "0.3.11"
maintainers = [
  { name="Mathias Berg Rosendal", email="mathiasros@gmail.com"},
  { name="Théodore Le Nalinec"},
]
authors = [
  { name="Mathias Berg Rosendal", email="mathiasros@gmail.com"},
]
description = "A package for convenient python functions when processing Balmorel data or results"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['pandas>=2.1.4', 'matplotlib>=3.9.0', 'geopandas>=0.14.4', 
                'gamsapi[transfer]>=45.7.0', 'ipywidgets>=8.1.3', 'eel>=0.17.0']

[project.urls]
Repository = "https://github.com/Mathias157/pybalmorel"
Issues = "https://github.com/Mathias157/pybalmorel/issues"

[tool.setuptools.package-data]
"pybalmorel" = ["Balmorelbb4_ReadData.inc",
                "Balmorel_ReadData.gms",
                "geofiles/*.*",
                "interactive/dashboard/static/*.*"]