[project]
name = "pybalmorel"
version = "1.1.0"
maintainers = [
  { name="Mathias Berg Rosendal", email="mathiasros@proton.me"},
  { name="Théodore Le Nalinec"},
]
authors = [
  { name="Mathias Berg Rosendal", email="mathiasros@proton.me"},
]
description = "A package for convenient python functions when processing Balmorel data or results"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["./LICENSE*"]
dependencies = ['pandas>=2.1.4', 'matplotlib>=3.9.0', 'geopandas>=0.14.4', 
                'gamsapi[transfer]>=45.7.0', 'ipywidgets>=8.1.3', 'cartopy>=0.24.1', 
                'requests']

[project.urls]
Repository = "https://github.com/Mathias157/pybalmorel"
Issues = "https://github.com/Mathias157/pybalmorel/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pybalmorel" = ["Balmorelbb4_ReadData.inc",
                "Balmorel_ReadData.gms",
                "geofiles/*.*",
                "geofiles/**/*.*",
                "interactive/dashboard/static/*.*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = ["dev"]
user = ["user"]

# --- dev: for developing pybalmorel and building documentation ---
[tool.pixi.feature.dev.dependencies]
numpy = ">=2.4.2,<3"
pandas = ">=3.0.1,<4"
matplotlib = ">=3.10.8,<4"
geopandas = ">=1.1.2,<2"
ipywidgets = ">=8.1.8,<9"
ipykernel = ">=7.2.0,<8"
pytest = ">=9.0.2,<10"
requests = ">=2.32.5,<3"
setuptools = ">=77.0.3"
twine = ">=6.1,<7"
packaging = ">=24.0,<25"
myst-parser = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autoapi = "*"
sphinx-copybutton = "*"
python-lsp-server = "*"

[tool.pixi.feature.dev.pypi-dependencies]
pybalmorel = { path = ".", editable = true }
build = ">=1.2,<2"
ripgrepy = ">=2.2.0,<3"
tsam = "*"

[tool.pixi.feature.dev.activation.env]
GAMS_SYSTEM_DIR = "/opt/gams/53"
LOCAL_BALMOREL_DIR = "../Balmorel"

[tool.pixi.feature.dev.tasks]
test = { cmd = "pytest tests -s", description = "Run the test suite with print outputted to console" }
_build = { cmd = "python -m build", description = "Build source and wheel distributions into dist/" }
publish = { depends-on = ["_build"], cmd = "python -m twine upload dist/*", description = "Build and upload the package to PyPI" }
publish-test = { depends-on = ["_build"], cmd = "python -m twine upload --repository testpypi dist/*", description = "Build and upload the package to test PyPI" }
_docs-build = { cmd = "sphinx-build docs docs/_build/html", description = "Build the Sphinx documentation" }
_docs-serve = { cmd = "python -m http.server 8000", cwd = "docs/_build/html", description = "Serve the built documentation on http://127.0.0.1:8000" }
docs = { depends-on = ["_docs-build", "_docs-serve"], description = "Build the documentation and serve it on http://127.0.0.1:8000" }

# --- user: test pybalmorel as an end-user (PyPI install only) ---
[tool.pixi.feature.user.pypi-dependencies]
pybalmorel = "*"
